[package]
name = "galleon"
version = "0.1.0"
edition = "2021"
description = """
terminal ui
"""
repository = "https://github.com/HellConnector/galleon/"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "0.24.0"